--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://htwwth.github.io/Aginskoe/",
+  "homepage": "https://htwwth.github.io/Aginskoe/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
